# ewb-sdk-python

./: .coveragerc  .gitignore  .pylintrc  AGENTS.md  CONTRIBUTING.md  README.md  RELEASE.md  bitbucket-pipelines.yml  changelog.md  generate_pb.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  shell:  test_junction.py  tox.ini
.github/workflows/: build.yml  deploy-snapshot.yml  maven-hotfix-branch.yml  maven-lts-branch.yml  python-hotfix-branch.yml  python-lib-build.yml  python-lib-release.yml  python-lib-snapshot.yml  python-lts-branch.yml  python-publish.yml  release.yml
docs/: .gitignore  README.md  architecture.md  docusaurus.config.js  package-lock.json  package.json  release.md  sending.md  sidebars.js  streaming.md  versions.json
docs/archive/: versions.json
docs/archive/versioned_sidebars/: version-0.22.0-sidebars.json  version-0.36.0-sidebars.json  version-0.37.4-sidebars.json  version-0.41.1-sidebars.json  version-0.43.1-sidebars.json  version-1.3.0-sidebars.json
docs/docs/: consumer.mdx  datamodel.mdx  ewb_file_paths.mdx  overview.md  persistence.mdx  protection.mdx  query-network-state-client.mdx  query-network-state-service.mdx  services.mdx  tracing.mdx  update-network-state-client.mdx  venv_setup.mdx
docs/site-config/: release-notes.md  sidebars.js
docs/src/pages/: release-notes.md
docs/versioned_docs/version-$VERSION/: consumer.mdx  venv_setup.mdx
docs/versioned_docs/version-0.21.0/: consumer.mdx  datamodel.mdx
docs/versioned_docs/version-0.22.0/: consumer.mdx  datamodel.mdx
docs/versioned_docs/version-0.27.0/: consumer.mdx
docs/versioned_docs/version-0.29.0/: consumer.mdx
docs/versioned_docs/version-0.32.0/: consumer.mdx
docs/versioned_docs/version-0.34.0/: consumer.mdx
docs/versioned_docs/version-0.35.0/: consumer.mdx  intellij_setup.mdx  services.mdx
docs/versioned_docs/version-0.37.0/: tracing.mdx
docs/versioned_docs/version-0.41.1/: consumer.mdx  protection.mdx
docs/versioned_docs/version-0.42.0/: query-network-state-client.mdx  update-network-state-client.mdx
docs/versioned_docs/version-0.44.0/: update-network-state-client.mdx
docs/versioned_docs/version-0.44.1/: query-network-state-client.mdx  update-network-state-service.mdx
docs/versioned_docs/version-1.0.3/: datamodel.mdx  services.mdx
docs/versioned_docs/version-1.0.4/: query-network-state-service.mdx
docs/versioned_sidebars/: version-$VERSION-sidebars.json  version-0.21.0-sidebars.json  version-0.22.0-sidebars.json  version-0.22.1-sidebars.json  version-0.23.0-sidebars.json  version-0.24.0-sidebars.json  version-0.25.0-sidebars.json  version-0.26.0-sidebars.json  version-0.27.0-sidebars.json  version-0.27.1-sidebars.json  version-0.29.0-sidebars.json  version-0.32.0-sidebars.json  version-0.33.0-sidebars.json  version-0.34.0-sidebars.json  version-0.35.0-sidebars.json  version-0.36.0-sidebars.json  version-0.38.0-sidebars.json
protos/zepben/postbox/: pb.proto
src/zepben/cimbend/: __init__.py  _dataclass.py  cores.py  exceptions.py  util.py
src/zepben/evolve/: __init__.py  exceptions.py  types.py  util.py
src/zepben/ewb/: __init__.py  types.py  util.py
src/zepben/model/: __init__.py  aclinesegment.py  asset_info.py  base_voltage.py  common.py  conducting_equipment.py  connectivity_node.py  connectivity_node_container.py  connectors.py  containers.py  cores.py  customer.py  decorators.py  diagram_layout.py  direction.py  energy_consumer.py  energy_source.py  energy_source_phase.py  equipment.py  equipment_container.py  exceptions.py  identified_object.py  meter_reading.py  metering.py  metrics_store.py  network.py  per_length_sequence_impedance.py  phase_shunt_connection_kind.py  phases.py  power_system_resource.py  power_transformer.py  streaming.py  substation.py  switch.py  terminal.py  util.py  vector_group.py  winding_connection.py  wiring.py
src/zepben/postbox/: __init__.py  pb_pb2.py  pb_pb2_grpc.py
test/: async_hypothesis_test_case.py  capture_mock_sequence.py  catching_thread.py  cim_creators.py  conftest.py  experiment.py  log_on_failure_decorator.py  network_fixtures.py  pb_creators.py  run_query.py  run_streaming.py  study_style.json  test_consumer.py  test_identified_object.py  test_location.py  test_metrics_store.py  test_model.py  test_name.py  test_name_type.py  test_network.py  test_network_to_cim.py  test_pb_serialisation.py  test_powertransformer.py  test_producer.py  test_reference_resolvers.py  test_set_phasing.py  test_streaming.py  test_tracing.py  test_util.py  test_utils.py  util.py
test/auth/client/: test_token_fetcher.py
test/auth/common/: test_auth_exception.py  test_auth_method.py
test/busbranch/: __init__.py  conftest.py  test_bus_branch.py  test_bus_branch_creator.py
test/busbranch/data/: creators.py  end_of_branch_multiple_ec_pec.py  lv_equivalent_branch_network.py  multi_branch_common_lines_network.py  negligible_impedance_equipment_basic_network.py  open_switch_between_different_voltages.py  simple_node_breaker_network.py  single_branch_common_lines_network.py  three_common_lines_network.py
test/cim/: cim_creators.py  collection_validator.py  collection_verifier.py  common_testing_functions.py  constructor_validation.py  enum_validator.py  enum_verifier.py  extract_testing_args.py  fill_fields.py  private_collection_validator.py  property_validator.py  property_verifier.py  test_common_two_way_connections.py
test/cim/iec61968/: __init__.py
test/cim/iec61970/: __init__.py
test/database/paths/: test_ewb_data_file_paths.py  test_local_ewb_data_file_paths.py
test/database/sqlite/: generate_sqlite_sql.py  schema_utils.py  test_database_sqlite.py
test/dataclass_descriptors/: test_basic_descriptor.py  test_dataclass_base.py
test/model/: test_nominal_phase_path.py  test_resistance_reactance.py  test_traced_phases.py  test_traced_phases_creator.py
test/processors/: __init__.py
test/services/: __init__.py  test_services.py
test/streaming/: test_streaming.py
test/testing/: test_test_network_builder.py
test/tracing/: test_assign_to_feeders.py  test_set_direction.py
(+2003 files in other folders)
