#  Copyright 2025 Zeppelin Bend Pty Ltd
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
    requires = [
        "setuptools",
        "wheel",
        "build>=1.2.0"
    ]
    build-backend = "setuptools.build_meta"

[project]
    name = "zepben.ewb"
    version = "1.1.0b14"
    description = "Python SDK for interacting with the Energy Workbench platform"
    readme = {file = "README.md", content-type = "text/markdown"}
    license = "MPL-2.0"
    requires-python = '>=3.10,<3.13'
    authors = [
        {name = "Kurt Greaves", email = "kurt.greaves@zepben.com"},
        {name = "Max Chesterfield", email = "max.chesterfield@zepben.com"}
    ]
    dependencies = [
        "zepben.protobuf==1.0.0",
        "typing_extensions==4.14.1",
        "requests==2.32.5",
        "urllib3==2.5.0",
        "PyJWT==2.10.1",
        "dataclassy==0.6.2",
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: OS Independent"
    ]

[project.urls]
    Repository = "https://github.com/zepben/evolve-sdk-python"
    Homepage = "https://zepben.com"

[project.optional-dependencies]
    test = [
        "pytest==8.4.1",
        "pytest-cov==6.2.1",
        "pytest-asyncio==1.1.0",
        "pytest-timeout==2.4.0",
        "pytest-subtests==0.14.2",
        "hypothesis==6.140.3",
        "grpcio-testing==1.61.3",
        "pylint==2.14.5",
        "six==1.16.0",
        "tox"
    ]

[tool.setuptools.packages.find]
    where = ["src/"]
