#  Copyright 2025 Zeppelin Bend Pty Ltd
#  This Source Code Form is subject to the terms of the Mozilla Public
#  License, v. 2.0. If a copy of the MPL was not distributed with this
#  file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
    requires = [
        "setuptools",
        "wheel",
        "build>=1.2.0",
        "cython"
    ]
    build-backend = "setuptools.build_meta"

[project]
    name = "zepben.ewb"
    version = "1.4.0b12"
    description = "Python SDK for interacting with the Energy Workbench platform"
    readme = {file = "README.md", content-type = "text/markdown"}
    license = "MPL-2.0"
    requires-python = '>=3.10,<3.15'
    authors = [
        {name = "Kurt Greaves", email = "kurt.greaves@zepben.com"},
        {name = "Max Chesterfield", email = "max.chesterfield@zepben.com"}
    ]
    dependencies = [
        "zepben.protobuf==1.8.0b3",
        "typing_extensions==4.15.0",
        "requests==2.32.5",
        "urllib3==2.5.0",
        "PyJWT==2.10.1",
        "typing-extensions==4.15.0",
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Operating System :: OS Independent"
    ]

[project.urls]
    Repository = "https://github.com/zepben/evolve-sdk-python"
    Homepage = "https://zepben.com"

[project.optional-dependencies]
    test = [
        "pytest==8.4.1",
        "pytest-cov==6.2.1",
        "pytest-asyncio==1.1.0",
        "pytest-timeout==2.4.0",
        "pytest-subtests==0.14.2",
        "hypothesis==6.140.3",
        "grpcio-testing==1.81.1",
        "pylint==2.14.5",
        "six==1.16.0",
        "tox"
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "F405",  # undefined-local-with-import-star-usage
    "E731",  # lambda-assignment
    "E741",  # ambiguous-variable-name
    "E722",  # bare-except
]

[tool.ruff.lint.per-file-ignores]
"src/zepben/ewb/__init__.py" = ["F403"]  # star-imports are intentional here
"src/zepben/ewb/auth/__init__.py" = ["F403"]
"src/zepben/ewb/database/sqlite/common/base_database_tables.py" = ["F403"]
"src/zepben/ewb/database/sqlite/customer/customer_database_tables.py" = ["F403"]
"src/zepben/ewb/database/sqlite/diagram/diagram_database_tables.py" = ["F403"]
"src/zepben/ewb/database/sqlite/network/network_database_tables.py" = ["F403"]
"src/zepben/ewb/services/common/resolver.py" = ["F403"]
"src/zepben/ewb/services/network/translator/network_cim2proto.py" = ["F403"]
"src/zepben/ewb/services/network/translator/network_proto2cim.py" = ["F403"]
"test/cim/fill_fields.py" = ["F403"]
"test/conftest.py" = ["F403"]
"test/services/network/translator/test_network_translator.py" = ["F403"]
"test/streaming/get/pb_creators.py" = ["F403"]
"src/zepben/ewb/examples/__init__.py" = ["F403"]
"test/services/customer/translator/test_customer_translator.py" = ["F403"]
"test/services/diagram/translator/test_diagram_translator.py" = ["F403"]
"src/zepben/ewb/dataclassy/*" = ["F401"]

[tool.setuptools.packages.find]
    where = ["src/"]
